# toy-snippets

./: .gitignore
common_lisp/: flake.nix  hello.lisp
cpp/: CMakeLists.txt  concurrent_queue_with_lock.cpp  deducing_this.cpp  defer.h  log_queue.cpp  optional_reference.cpp  parser_combinator.cpp  pimpl.cpp  private_token.cpp  ring_buffer.cpp  test.hpp
cpp/design_pattern/: .clangd  CMakeLists.txt  TypeStatePattern.cpp  TypeStatePattern.hpp
cpp/ebpf/: flake.nix
cpp/ebpf/hello/: hello.bpf.c  hello.cpp  hello.skel.h
cpp/snake/: CMakeLists.txt  snake.cpp  snake_server.cpp
python/: CPS.py
